infra/cloudformation/network/sg.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Security Groups for ALB, ECS, RDS, VPC Endpoint

Parameters:
  Environment:
    Type: String
    AllowedValues: [dev, prd]

  ProjectName:
    Type: String

  VpcId:
    Type: AWS::EC2::VPC::Id

  VpcCidrBlock:
    Type: String
    Description: CIDR block of the VPC (e.g. 10.0.0.0/16)

Resources:

  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ALB Security Group
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-${ProjectName}-alb-sg"

  AlbHttpsIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref AlbSecurityGroup
      IpProtocol: tcp
      FromPort: 443
      ToPort: 443
      CidrIp: 0.0.0.0/0

  EcsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: ECS from VPC Local
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: "-1"
          FromPort: 0
          ToPort: 0
          # CidrIp: !GetAtt Vpc.CidrBlock
          CidrIp: !Ref VpcCidrBlock
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-${ProjectName}-ecs-sg"

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: RDS from ECS
      VpcId: !Ref VpcId
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-${ProjectName}-rds-sg"

  RdsIngressFromEcs:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref RdsSecurityGroup
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref EcsSecurityGroup

  VpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: VPC Endpoint from ECS
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref EcsSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-${ProjectName}-vpc-endpoint-sg"

  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for RDS
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 10.0.0.0/8  # 必要に応じて ECS SG に制限可能
      Tags:
        - Key: Name
          Value: !Sub "${Environment}-${ProjectName}-rds-sg"

Outputs:
  AlbSecurityGroup:
    Value: !Ref AlbSecurityGroup
    Export:
      Name: !Sub "${Environment}-${ProjectName}-AlbSG"

  EcsSecurityGroup:
    Value: !Ref EcsSecurityGroup
    Export:
      Name: !Sub "${Environment}-${ProjectName}-EcsSG"

  RdsSecurityGroup:
    Value: !Ref RdsSecurityGroup
    Export:
      Name: !Sub "${Environment}-${ProjectName}-RdsSG"

  VpcEndpointSecurityGroup:
    Value: !Ref VpcEndpointSecurityGroup
    Export:
      Name: !Sub "${Environment}-${ProjectName}-VpcEndpointSG"

  RDSSecurityGroupId:
    Value: !Ref RDSSecurityGroup
    Export:
      Name: !Sub "${Environment}-${ProjectName}-RDSSecurityGroupId"
